# ttp

./: .gitignore  Dockerfile  README.md  build.gradle  docker-compose.yaml  settings.gradle
docs/: Insomnia_2024-08-20.json  TTP API Documentation.postman_collection.json  TrustedThirdPartyAPI.md
lib/: encrypt
paillier-encryption-backend/: Cargo.toml  README.md
paillier-encryption-backend/src/: main.rs
run-configs/: TtpApplication.run.xml
scripts/: copy-lib.sh
src/main/java/nl/medtechchain/ttp/: TtpApplication.java
src/main/java/nl/medtechchain/ttp/config/: EncryptLibPath.java
src/main/java/nl/medtechchain/ttp/controller/: MainController.java
src/main/java/nl/medtechchain/ttp/controller/dto/: DecryptRequest.java  DecryptResponse.java  EncryptRequest.java  EncryptResponse.java  GetEncryptionKeyRequest.java  GetEncryptionKeyResponse.java
src/main/java/nl/medtechchain/ttp/controller/error/: ErrorResponse.java  GlobalExceptionHandler.java
src/main/java/nl/medtechchain/ttp/encryption/: DecryptionKey.java  EncryptionKey.java  EncryptionScheme.java  EncryptionSchemeType.java  KeyPair.java
src/main/java/nl/medtechchain/ttp/encryption/paillier/: PaillierDecryptionKey.java  (+3 more)
src/main/java/nl/medtechchain/ttp/store/: KeyStore.java
src/main/java/nl/medtechchain/ttp/subprocess/: SubprocessCall.java
src/main/java/nl/medtechchain/ttp/util/: StringToUUID.java  SubprocessCall.java
src/main/java/nl/tudelft/medtechchain/ttp/: TtpApplication.java
src/main/resources/: application.properties
src/test/java/nl/tudelft/medtechchain/ttp/: TtpApplicationTests.java
(+14 files in other folders)
